--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.7",
     "lint-staged": "^15.2.0",
